@@ -16,65 +16,63 @@
  */
 package org.graylog.storage.opensearch3.views.export;
 
-import com.google.common.collect.Streams;
 import jakarta.inject.Inject;
 import org.graylog.plugins.views.search.export.ExportMessagesCommand;
 import org.graylog.shaded.opensearch2.org.opensearch.action.search.SearchRequest;
-import org.graylog.shaded.opensearch2.org.opensearch.action.search.SearchResponse;
-import org.graylog.shaded.opensearch2.org.opensearch.search.SearchHit;
-import org.graylog.shaded.opensearch2.org.opensearch.search.builder.SearchSourceBuilder;
-import org.graylog.shaded.opensearch2.org.opensearch.search.sort.SortBuilders;
-import org.graylog.shaded.opensearch2.org.opensearch.search.sort.SortOrder;
+import org.graylog.storage.opensearch3.OfficialOpensearchClient;
+import org.graylog2.indexer.ElasticsearchException;
 import org.graylog2.plugin.Message;
+import org.opensearch.client.opensearch._types.FieldValue;
+import org.opensearch.client.opensearch.core.SearchResponse;
+import org.opensearch.client.opensearch.core.search.Hit;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 public class SearchAfter implements RequestStrategy {
 
     static final String DEFAULT_TIEBREAKER_FIELD = Message.GL2_SECOND_SORT_FIELD;
-    static final String EVENTS_TIEBREAKER_FIELD = Message.FIELD_ID;
 
-    private final ExportClient client;
+    private final OfficialOpensearchClient opensearchClient;
 
-    private Object[] searchAfterValues = null;
+    private List<FieldValue> searchAfterValues = null;
 
     @Inject
-    public SearchAfter(ExportClient client) {
-        this.client = client;
+    public SearchAfter(OfficialOpensearchClient opensearchClient) {
+        this.opensearchClient = opensearchClient;
     }
 
     @Override
-    public List<SearchHit> nextChunk(SearchRequest search, ExportMessagesCommand command) {
-
-        SearchResponse result = search(search);
-        List<SearchHit> hits = Streams.stream(result.getHits()).collect(Collectors.toList());
-        searchAfterValues = lastHitSortFrom(hits);
-        return hits;
+    public List<Hit<Map>> nextChunk(org.opensearch.client.opensearch.core.SearchRequest newSearch, ExportMessagesCommand command) {
+        org.opensearch.client.opensearch.core.SearchResponse<Map> newResult = search(newSearch);
+        final List<Hit<Map>> newHits = newResult.hits().hits();
+        searchAfterValues = lastHitSortFrom(newHits);
+        return newHits;
     }
 
-    private SearchResponse search(SearchRequest search) {
-        configureSort(search.source());
-
-        return client.search(search, "Failed to execute Search After request");
+    private SearchResponse<Map> search(org.opensearch.client.opensearch.core.SearchRequest newSearch) {
+        final SearchResponse<Map> result = opensearchClient.sync(c -> c.search(newSearch, Map.class), "failed to serarch");
+        if (result.shards().failed() > 0) {
+            final List<String> errors = result.shards().failures().stream()
+                    .map(e -> e.reason().reason())
+                    .distinct()
+                    .toList();
+            throw new ElasticsearchException("Unable to perform export query: ", errors);
+        }
+        return result;
     }
 
-    private void configureSort(SearchSourceBuilder source) {
-        source.sort(SortBuilders.fieldSort("timestamp").order(SortOrder.ASC));
-        source.sort(SortBuilders.fieldSort(DEFAULT_TIEBREAKER_FIELD).order(SortOrder.ASC).unmappedType("keyword"));
-    }
-
-    private Object[] lastHitSortFrom(List<SearchHit> hits) {
-        if (hits.isEmpty())
+    private List<FieldValue> lastHitSortFrom(List<Hit<Map>> hits) {
+        if (hits.isEmpty()) {
             return null;
-
-        SearchHit lastHit = hits.get(hits.size() - 1);
-
-        return lastHit.getSortValues();
+        }
+        return hits.getLast().sort();
     }
 
     @Override
-    public SearchSourceBuilder configure(SearchSourceBuilder ssb) {
-        return searchAfterValues == null ? ssb : ssb.searchAfter(searchAfterValues);
+    public void configure(org.opensearch.client.opensearch.core.SearchRequest.Builder builder) {
+        if (searchAfterValues != null) {
+            builder.searchAfter(searchAfterValues);
+        }
     }
 }
